--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -10,9 +10,12 @@ dependencies {
 //    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // 以上support包依赖全部迁移到androidx
     // 自定义编译时注解
-    implementation project(path: ':j4u-annotations')
-    implementation project(path: ':j4ulib')
-    kapt project(path: ':j4u-compiler')
+    implementation 'com.qy.j4u:j4u_common:1.0.1'
+    implementation 'com.qy.j4u:j4u-annotations:1.0.0'
+    implementation 'com.qy.j4u:j4ulib:1.0.0'
+//    annotationProcessor "com.qy.j4u:j4u-compiler:1.0.0"
+    kapt "com.qy.j4u:j4u-compiler:1.0.1"
+//    kapt project(path: ':j4u-compiler')
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
@@ -27,13 +30,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
-    // 语音识别相关的依赖
-//    implementation 'ai.api:sdk:1.10.0@aar'
-    //    implementation 'ai.api:libai:1.2.1'
+
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'commons-io:commons-io:20030203.000550'
-    // log依赖
-    implementation 'com.orhanobut:logger:2.2.0'
+
     // 阿里开源路由跳转
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
     kapt 'com.alibaba:arouter-compiler:1.2.2'
@@ -81,23 +81,8 @@ dependencies {
     implementation 'com.lxj:xpopup:1.7.3-x'
     // 局域网通信 coap
     implementation 'org.eclipse.californium:californium-core:1.0.7'
-
-    // 3d地图
-//    implementation 'com.amap.api:3dmap:latest.integration'
-    //2D地图
-//    implementation 'com.amap.api:map2d:latest.integration'
-    //导航 暂时不用导航 和3d地图有冲突
-//    implementation 'com.amap.api:navi-3dmap:latest.integration'
-    //搜索
-//    implementation 'com.amap.api:search:latest.integration'
-    //定位
-//    implementation 'com.amap.api:location:latest.integration'
     // adapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    // 微信mars
-//    implementation 'com.tencent.mars:mars-core:1.2.0'
-    // 腾讯数据库
-//    implementation 'com.tencent.wcdb:wcdb-android:1.0.8'
     // 底部导航
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.1.0'
     // rxbinding
@@ -146,4 +131,7 @@ dependencies {
 
     // gt调试工具
     implementation 'com.tencent.wstt.gt:gt-sdk:3.1.0'
+    // guava
+    implementation 'com.google.guava:guava:27.1-android'
+    implementation "androidx.multidex:multidex:2.0.1"
 }
