--- a/j4u_common/build.gradle
+++ b/j4u_common/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
-
+afterEvaluate {
+    generateReleaseBuildConfig.enabled = false
+}
 android {
     compileSdkVersion 28
 
