--- a/j4ulib/build.gradle
+++ b/j4ulib/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.library'
-
+afterEvaluate {
+    generateReleaseBuildConfig.enabled = false
+}
 android {
     compileSdkVersion 28
-
 
     defaultConfig {
         minSdkVersion 17
@@ -22,6 +23,7 @@ android {
     }
 
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
