--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -10,10 +10,10 @@ dependencies {
 //    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // 以上support包依赖全部迁移到androidx
     // 自定义编译时注解
-    implementation 'com.qy.j4u:j4u_common:1.0.1'
+    implementation 'com.qy.j4u:j4u_common:1.0.2@aar'
     implementation 'com.qy.j4u:j4u-annotations:1.0.0'
-    implementation 'com.qy.j4u:j4ulib:1.0.0'
-    kapt "com.qy.j4u:j4u-compiler:1.0.0"
+    implementation 'com.qy.j4u:j4ulib:1.0.2@aar'
+    kapt "com.qy.j4u:j4u-compiler:1.0.1"
 
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
