--- a/j4ulib/src/main/AndroidManifest.xml
+++ b/j4ulib/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
-<manifest package="ihelmet_intl.ihelmet.slinph.com.j4ulib"
+<manifest package="com.qy.j4u"
           xmlns:android="http://schemas.android.com/apk/res/android"/>
