--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -10,9 +10,9 @@ dependencies {
 //    implementation 'com.android.support:recyclerview-v7:28.0.0'
     // 以上support包依赖全部迁移到androidx
     // 自定义编译时注解
-    implementation 'com.qy.j4u:j4u_common:1.0.2@aar'
+    implementation 'com.qy.j4u:j4u_common:1.0.0'
     implementation 'com.qy.j4u:j4u-annotations:1.0.0'
-    implementation 'com.qy.j4u:j4ulib:1.0.2@aar'
+    implementation 'com.qy.j4u:j4ulib:1.0.2'
     kapt "com.qy.j4u:j4u-compiler:1.0.1"
 
 
