--- a/j4u_common/build.gradle
+++ b/j4u_common/build.gradle
@@ -22,7 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    libraryVariants.all {
+        it.generateBuildConfig.enabled = false
+    }
 }
 
 
