--- a/j4u_common/nexus_push.gradle
+++ b/j4u_common/nexus_push.gradle
@@ -18,6 +18,7 @@ println("nexusPassword:${nexus_password}")
 def getRepositoryUrl() {
     return isReleaseBuild() ? RELEASE_REPOSITORY_URL : SNAPSHOT_REPOSITORY_URL
 }
+
 afterEvaluate { project ->
     uploadArchives {
         repositories {
@@ -31,6 +32,19 @@ afterEvaluate { project ->
             }
         }
     }
+    task androidJavadocs(type: Javadoc) {
+        failOnError false
+        source = android.sourceSets.main.java.srcDirs
+        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    }
+    task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
+        classifier = 'javadoc'
+        from androidJavadocs.destinationDir
+    }
+    task androidSourcesJar(type: Jar) {
+        classifier = 'sources'
+        from android.sourceSets.main.java.sourceFiles
+    }
 
     //解决 JavaDoc 中文注释生成失败的问题
     tasks.withType(Javadoc) {
@@ -39,5 +53,8 @@ afterEvaluate { project ->
         options.addStringOption('charSet', 'UTF-8')
     }
     artifacts {
+        archives androidSourcesJar
+        archives androidJavadocsJar
     }
+
 }
