--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -10,4 +10,12 @@ sourceSets {
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
+    implementation 'com.android.tools.build:gradle:3.3.2'
+    implementation 'org.javassist:javassist:3.25.0-GA'
+}
+
+repositories {
+    mavenCentral()
+    jcenter()
+    google()
 }
