--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         maven {
             url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
         }
+        maven {
+            url "http://maven.aliyun.com/nexus/content/repositories/snapshots"
+        }
         mavenCentral()
     }
     dependencies {
