--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.4.31'
     repositories {
         jcenter()
         google()
@@ -14,15 +14,15 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8' //添加该依赖
+//        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
+//        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
+//        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8' //添加该依赖
         // 添加emas-services插件
-        classpath 'com.aliyun.ams:emas-services:1.0.1'
+//        classpath 'com.aliyun.ams:emas-services:1.0.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0'
     }
