--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':easeui', ':buildSrc', ':j4u-compiler', ':j4u-annotations', ':j4ulib', ':j4u_common'
+include ':app', ':easeui', ':j4u-compiler', ':j4u-annotations', ':j4ulib', ':j4u_common'
